--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -409,12 +409,13 @@
 <p>Under the CRA's administrative policy, if you reimburse your <strong>employee's spouse or common-law partner</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The amount of the travel expenses paid for the spouse is reasonable (step 2)</li>
-<li class="cnjnctn-col">You requested the spouse or common-law partner to attend</li>
-<li class="cnjnctn-col">The spouse or common-law partner <strong>spent more than 50% of the time in business-related</strong> activities</li>
+<li class="cnjnctn-col">You require the spouse or common-law partner their presence on the <strong>business trip to accomplish the business objectives</strong> of the trip</li>
+<li class="cnjnctn-col">The spouse or common-law partner <strong>spent more than 50% of the time on business-related</strong> activities</li>
 </ul>
-<p>The benefit is considered from the employee's travelling expenses necessary to accomplish the business objectives of the trip.</p>
+<p>The amount of the expense which is not taxable is the amount of the employee's spouse or common-law partner travelling expenses necessary to accomplish the business objectives of the trip.</p>
+
 <h4>Taxable situation</h4>
-<p>If the amount paid for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable to the employee.</p>
+<p>If the allowance or reimbursement you provide to your employee for travel expenses for your employee’s spouse or common-law partner <strong>does not</strong> meet all of the conditions above, the benefit is taxable to the employee.</p>
 </details>
 
 
