--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -437,44 +437,28 @@
 <p><strong>Only</strong> the cost the employer paid that is <strong>not</strong> related to business activities is a taxable benefit.</p>
 </details>
 	
-<details><summary>Situation: Your employee is <strong>not part of the above situation</strong> </summary>
+<details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
 <h4 id="other">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you provide a travel allowance (other than an allowance related to the use of a vehicle), the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
-
+<p>Under the CRA's administrative policy, if you provide a travel allowance (other than an allowance related to the use of a vehicle) within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, so your employee can perform their duties in a more efficient manner, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-                                                         
- <li class="cnjnctn-col">The travel is: 	
-	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm"> 
-	 <li class="cnjnctn-col">for business purposes outside the municipality and metropolitan area where your establishment is located and where your employee ordinarily works or reports </li>
-	 <li class="cnjnctn-col">within a municipality or a metropolitan area in order to perform their duties in a more efficient way during a work shift </li>
- </ul></li>
-<li class="cnjnctn-col">Travel allowance is <strong>reasonable</strong>, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
-<li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (steps 2 and 3)</li>
- <li class="cnjnctn-col">You are the <strong>primary beneficiary</strong> of your employee's travel </li>
- <li class="cnjnctn-col">Travel allowance is not a form of additional remuneration and is not a form of tax avoidance </li>
+<li class="cnjnctn-col">The amount of the travel allowance is <strong>reasonable</strong>, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
+<li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (step 3)</li>
+ <li class="cnjnctn-col">You are the <strong>primary beneficiary</strong> of the allowance </li>
+ <li class="cnjnctn-col">The travel allowance is not a form of additional remuneration and is not a form of tax avoidance</li>
 </ul>
-
-<p>To determine what is reasonable, you can use the guide for the public service employee travel allowances: <a href="https://www.njc-cnm.gc.ca/s3/en">Rates and allowances</a> on the National Joint Council website.</p>
-
+<p>This means that you do not have to include this type of travel allowance if its main reason is so that your employee's duties are performed in a more efficient way during a work shift.</p>
 <details class="mrgn-bttm-md"><summary>Examples </summary>
-
     <div class="table-responsive">
       <table class="table table-striped small table-condensed">
         <caption class="wb-inv">
        Examples 
         </caption>
-
-
 <thead class="small">
-
 <tr>
 <th scope="col">Examples</th>
 <th scope="col">Result</th>
 </tr>
-
 </thead>
-
-
 <tbody>
 
 <tr>
@@ -491,18 +475,20 @@
 	<td><p>An employer gives its employees a travel allowance that covers food and drink when they have to go outside their normal workplace to perform duties. One of the employees regularly returns to the office before noon and stays there until having to go to an appointment that afternoon. It would be to the employee's advantage to return to the office to have his meal. </p></td>
 	<td><p>The allowance is taxable because it takes the form of another type of compensation. However, if it happens that the employee is legitimately outside the office during his normal meal break, the allowance for those days may be excluded from his income. </p></td>
 </tr> </tbody> </table></div></details>
-
 <h4>Taxable situation</h4>
-<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the full amount is a taxable benefit.</p>
+<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the full amount is a taxable benefit.</p>
+</details>
 
-<p>For example, the travel is taxable in one of the following situation: </p>
 
-<ul class="fa-ul">	 
-	 <li><span class="fas fa-check fa-li fa-lg text-success"></span> Free holiday or vacation you paid to your employee, the employee's family, or both </li>
-	 <li><span class="fas fa-check fa-li fa-lg text-success"></span> You pay a third party for a trip or vacation for your employee or their family</li>
- 	<li><span class="fas fa-check fa-li fa-lg text-success"></span> Vacation property that you own and allow your employee to use for other than your business purpose</li>
-	<li><span class="fas fa-check fa-li fa-lg text-success"></span> Business trip extended by your employee, only the extension of the trip is taxable</li>
- </ul>
+<details><summary>Situation: Your employee is travelling <strong>outside of your municipality or metropolitan area</strong></summary>
+<h4 id="other2">Non-taxable situation</h4>
+<p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling away from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
+<li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
+</ul>
+<h4>Taxable situation</h4>
+<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
 </details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
