--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -326,11 +326,10 @@
 <p>Whether an allowance or reimbursement for travel expenses is reasonable is a question of fact. You should compare the reasonable costs for travel expenses that you would expect your employee to incur against the allowance or reimbursement you pay to the employee for the trip. In general, the CRA considers an allowance or a reimbursement reasonable if it covers the expenses that the employee paid as long as these expenses are not considered another form of remuneration. Amounts that are too high or too low can be considered unreasonable depending on the facts.</p>
 <p>You and your employee must be able to justify that the payment for travel expenses was reasonable should the non-inclusion of the benefit in the employee's income be reviewed. In supporting this claim, where applicable, you must get records from your employee to support the reasonability of the reimbursement or accountable allowance paid.</p>
 <hr>
-<p>If the amount of the payment for travel expenses:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> is <strong>not</strong> reasonable, the benefit is taxable.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span>If the amount of the payment for travel expenses is <strong>not</strong> reasonable, the benefit is taxable.</p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> is <strong>reasonable</strong> the benefit may not be taxable.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span>If the amount of the payment for travel expenses is <strong>reasonable</strong> the benefit may not be taxable.</p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if the benefit is taxable</a> </p>  </li>
 </ul>
 
