--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -697,7 +697,7 @@
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span>  An amount up to the amount of the allowance (if the employee did not keep a record or does not wish to claim employment expenses) </li>
 <li><span class="fas fa-check fa-li text-success"></span>  Expenses paid in the year (if a record was kept) </li>
-<li><span class="fas fa-check fa-li text-success"></span>  No expense if the allowance is not added to his or her income </li>
+<li><span class="fas fa-check fa-li text-success"></span>  No expense if the allowance is not added to their income </li>
 </ul>
 <p class="mrgn-tp-md">By signing the form, you are only certifying that the employee met the conditions of employment and had to pay for the expenses under their employment contract. </p>
 
