--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -274,6 +274,12 @@
 </nav>
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Travel expenses</h1>
+ <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
+                  <ul class="small mrgn-tp-sm">
+                     <li><a href="/cra-arc/payroll/calculate/benefit/transportation-pass.html">Transportation and airline passes</a></li>
+		 
+                  </ul>
+
 
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
