--- a/sred/scientific-research-experimental-development-tax-incentive-program/summary-provincial-territorial-research-development-tax-credits.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/summary-provincial-territorial-research-development-tax-credits.html
@@ -83,7 +83,7 @@
 </ul>
 
    <p>The following province and territories do not offer a tax credit for R&D:</p>
-  <ul>
+   <ul class="fa-ul">
    <li><span class="fas fa-times text-danger fa-li" aria-hidden="true" title="Province does not offer a research and development tax credit program"></span>Northwest Territories</li>
    <li><span class="fas fa-times text-danger fa-li" aria-hidden="true" title="Province does not offer a research and development tax credit program"></span>Nunavut</li>
    <li><span class="fas fa-times text-danger fa-li" aria-hidden="true" title="Province does not offer a research and development tax credit program"></span>PEI</li>
