--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
@@ -126,7 +126,7 @@
 		 <p>To learn more about other government funding and assistance, review:</p>
 		 <ul>
 			 <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/assistance-contract-payments-policy.html#s4_1_1">Section 4.1.1, Assistance and Contract Payments Policy</a></li>
-			<li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/summary-provincial-territorial-research-development-tax-credits-december-31-2016.html">Summary of provincial and territorial R&amp;D tax credits</a></li>
+			<li><a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/summary-provincial-territorial-research-development-tax-credits.html">Summary of provincial and territorial R&amp;D tax credits</a></li>
 		 </ul>
 
 		 <h2 id="h3">Get support understanding SR&amp;ED</h2>
