--- a/sred/scientific-research-experimental-development-tax-incentive-program/provincial-territorial-research-development-tax-credits.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/provincial-territorial-research-development-tax-credits.html
@@ -73,7 +73,7 @@
 
       <div aria-hidden="true">
     <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Scientific research and experimental development (SR&amp;ED) tax incentives</p>
-    <h1 class="gc-thickline mrgn-tp-0">Summary of provincial and territorial research&nbsp;and development (<abbr title="Research and development">R&amp;D</abbr>) tax credits</h1>
+    <h1 class="gc-thickline mrgn-tp-0">Provincial and territorial research&nbsp;and development (<abbr title="Research and development">R&amp;D</abbr>) tax credits</h1>
   </div>
 
     
