--- a/payroll/remit/getready.html
+++ b/payroll/remit/getready.html
@@ -123,13 +123,13 @@
 <h3>Types</h3>
 
 <ul>
-<li><a href="pd7a.html">Statement of account for current source deductions - Regular and quartery remitters (PD7A)</a> </li>
-<li><a href="pd7atm.html">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))  </a> </li>
-<li><a href="pd7arb.html">Remittance voucher booklets for accelerated remitters (PD7A-RB) </a>  </li>
-<li><a href="pd7r.html">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R) </a>  </li>
-<li><a href="pd1114.html">Request for tax deductions, CPP and EI information if you remit late (PD1114) </a>  </li>
-<li><a href="pd7dar.html">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR)) </a>  </li>
-<li><a href="pd7dx.html">Statement of account and payment on existing balance remittance voucher (PD7D(X)) </a>  </li>
+<li><a href="pd7a.html">Statement of account for current source deductions - Regular and quartery remitters - PD7A</a> </li>
+<li><a href="pd7atm.html">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)  </a> </li>
+<li><a href="pd7arb.html">Remittance voucher booklets for accelerated remitters - PD7A-RB </a>  </li>
+<li><a href="pd7r.html">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R </a>  </li>
+<li><a href="pd1114.html">Request for tax deductions, CPP and EI information if you remit late - PD1114 </a>  </li>
+<li><a href="pd7dar.html">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR) </a>  </li>
+<li><a href="pd7dx.html">Statement of account and payment on existing balance remittance voucher - PD7D(X) </a>  </li>
 </ul>
 
 
