--- a/payroll/remit/pd7a.html
+++ b/payroll/remit/pd7a.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Statement of account for current source deductions - Regular and quarterly remitters (PD7A) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
+         <title>Statement of account for current source deductions - Regular and quarterly remitters - PD7A - Remit (pay) payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -87,32 +87,32 @@
    
   <ul class="noline">
    <li>
-      <a href="pd7a.html" class="active" aria-current="page">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a>
+      <a href="pd7a.html" class="active" aria-current="page">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a>
     </li>  
 	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
     </li>
 	 <li>
-      <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters (PD7A-RB)</a>
-      <a href="pd7arb.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher booklets for accelerated remitters (PD7A-RB)</a>
+      <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
+      <a href="pd7arb.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
     </li>
   <li>
-      <a href="pd7r.html" class="hidden-xs hidden-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R)</a>
-      <a href="pd7r.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R)</a>
+      <a href="pd7r.html" class="hidden-xs hidden-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a>
+      <a href="pd7r.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a>
     </li>
    <li>
-      <a href="pd1114.html" class="hidden-xs hidden-sm">Request for tax deductions, CPP and EI information if you remit late (PD1114)</a>
-      <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late (PD1114)</a>
+      <a href="pd1114.html" class="hidden-xs hidden-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
+      <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
     </li>
  <li>
-      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR))</a>
-      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR))</a>
+      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
+      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
     </li>
 <li>
-      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher (PD7D(X))</a>
-      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher (PD7D(X))</a>
+      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
+      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
     </li>
 
 </ul></li>
@@ -134,7 +134,7 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</h1>
 
 <h2 class="h3">On this page</h2>
   <ul>
