--- a/payroll/remit/pd7r.html
+++ b/payroll/remit/pd7r.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
+         <title>Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R - Remit (pay) payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -86,33 +86,34 @@
       <a href="getready.html#gc-document-nav" class="visible-xs visible-sm">Get ready to remit (pay)</a>
    
   <ul class="noline">
-   <li>
-        <a href="pd7a.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a>
-      <a href="pd7a.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a>
+ <li>
+        <a href="pd7a.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a>
+      <a href="pd7a.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a>
   </li>  
+	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
     </li>
 	 <li>
-      <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters (PD7A-RB)</a>
-      <a href="pd7arb.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher booklets for accelerated remitters (PD7A-RB)</a>
+      <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
+      <a href="pd7arb.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
     </li>
   <li>
-    <a href="pd7r.html" class="active" aria-current="page">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R)</a>
+    <a href="pd7r.html" class="active" aria-current="page">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a>
      
     </li>
-   <li>
-      <a href="pd1114.html" class="hidden-xs hidden-sm">Request for tax deductions, CPP and EI information if you remit late (PD1114)</a>
-      <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late (PD1114)</a>
+    <li>
+      <a href="pd1114.html" class="hidden-xs hidden-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
+      <a href="pd1114.html#gc-document-nav" class="visible-xs visible-sm">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
     </li>
  <li>
-      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR))</a>
-      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR))</a>
+      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
+      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
     </li>
 <li>
-      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher (PD7D(X))</a>
-      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher (PD7D(X))</a>
+      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
+      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
     </li>
 
 </ul></li>
@@ -134,7 +135,7 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R)</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</h1>
 
 <h2 class="h3">On this page</h2>
   <ul>
@@ -146,16 +147,16 @@
  <h2 id="h_1">What is a PD7R</h2>
 <p>The PD7R is a payment voucher that is generated as per your request.</p>
 <p> The PD7R allows you, <strong>if you are eligible</strong>, to make a <strong>reconciliation payment</strong> by the last day of February without being subject to penalty or interest. You can <strong>only</strong> request a PD7R <strong>if you are eligible</strong>.</p>
-<p>The PD7R <strong>cannot </strong>be used to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
+<p>The PD7R <strong>cannot </strong>be used to remit <strong>current </strong>payroll remittances. You must use the PD7A for current remittances.</p>
 
- <h2 id="h_2">Eligibility to use the PoF</h2>
-<p>Eligibility is applied to businesses separately. If you own multiple businesses, you may have businesses that are eligible and some that are not. If you use the PoF and you are not eligible, penalties and interest will be applied. </p>
+ <h2 id="h_2">Eligibility to use PoF</h2>
+<p>Eligibility is applied to businesses separately. If you own multiple businesses, you may have businesses that are eligible and some that are not. If you use PoF and you are not eligible, penalties and interest will be applied. </p>
 <p>You are eligible to use PoF if you meet <strong>all </strong>of the following 3 criteria:</p>
 
-<ul class="list-unstyled cnjnctn-type-and">
+<ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col">The reconciliation payment is less than <strong>1% </strong>of the total annual remittances </li>
 <li class="cnjnctn-col">Payroll compliance is perfect which means <strong>all </strong>of the following apply:
-<ul class="list-unstyled cnjnctn-type-and">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">No late or outstanding remittances </li>
 <li class="cnjnctn-col">No assessments in the filing year </li>
 <li class="cnjnctn-col">All T4 information returns are filed on time </li>
@@ -163,7 +164,7 @@
 </li>
 <li class="cnjnctn-col">One or more of the following <strong>must </strong>apply:
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">You have employees who chose to be paid stock-based salaries or wages </li>
+<li class="cnjnctn-col">You have employees who chose to be paid stock-based remuneration </li>
 <li class="cnjnctn-col">You relied on third-party information for insurance, health benefits, broker information, taxable benefits and/or automobile fleet mileage </li>
 <li class="cnjnctn-col">You have employees who live in other tax jurisdictions </li>
 </ul>
