--- a/payroll/remit/pd1114.html
+++ b/payroll/remit/pd1114.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Request for tax deductions, CPP and EI information if you remit late (PD1114) - Remit (pay) payroll deductions and contributions - Canada.ca</title>
+         <title>Request for tax deductions, CPP and EI information if you remit late - PD1114 - Remit (pay) payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -87,32 +87,33 @@
    
   <ul class="noline">
    <li>
-        <a href="pd7a.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a>
-      <a href="pd7a.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a>
+        <a href="pd7a.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a>
+      <a href="pd7a.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a>
   </li>  
+	 
 	<li>
-      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))</a>
-      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters (PD7A(TM))</a>
+      <a href="pd7atm.html" class="hidden-xs hidden-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
+      <a href="pd7atm.html#gc-document-nav" class="visible-xs visible-sm">Statement of account for current source deductions - Accelerated remitters - PD7A(TM)</a>
     </li>
 	 <li>
-      <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters (PD7A-RB)</a>
-      <a href="pd7arb.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher booklets for accelerated remitters (PD7A-RB)</a>
+      <a href="pd7arb.html" class="hidden-xs hidden-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
+      <a href="pd7arb.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher booklets for accelerated remitters - PD7A-RB</a>
     </li>
-  <li>
-      <a href="pd7r.html" class="hidden-xs hidden-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R)</a>
-      <a href="pd7r.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions (PD7R)</a>
+ <li>
+      <a href="pd7r.html" class="hidden-xs hidden-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a>
+      <a href="pd7r.html#gc-document-nav" class="visible-xs visible-sm">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a>
     </li>
    <li>
-   <a href="pd1114.html" class="active" aria-current="page">Request for tax deductions, CPP and EI information if you remit late (PD1114)</a>
+   <a href="pd1114.html" class="active" aria-current="page">Request for tax deductions, CPP and EI information if you remit late - PD1114</a>
 
     </li>
  <li>
-      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR))</a>
-      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher (PD7D(AR))</a>
+      <a href="pd7dar.html" class="hidden-xs hidden-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
+      <a href="pd7dar.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and partial payment for arrears balance remittance voucher - PD7D(AR)</a>
     </li>
 <li>
-      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher (PD7D(X))</a>
-      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher (PD7D(X))</a>
+      <a href="pd7dx.html" class="hidden-xs hidden-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
+      <a href="pd7dx.html#gc-document-nav" class="visible-xs visible-sm">Statement of account and payment on existing balance remittance voucher - PD7D(X)</a>
     </li>
 
 </ul></li>
@@ -134,7 +135,7 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Request for tax deductions, CPP and EI information if you remit late (PD1114)</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Request for tax deductions, CPP and EI information if you remit late - PD1114</h1>
 
 <h2 class="h3">On this page</h2>
   <ul>
@@ -149,7 +150,7 @@
 
 
 <h2 id="h_2">How to respond to a PD1114 request</h2>
-<p>You <strong>must </strong>respond to the PD1114 request and provide <strong>one</strong> of the following explanation: </p>
+<p>You <strong>must </strong>respond to the PD1114 request and provide an explanation: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
    If a remittance has been made but not received by the CRA
@@ -162,7 +163,7 @@
 <p>You can send your response by:</p>
 
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">MyBA</a> or<a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html"> RAC </a>(select "<strong>Respond to notices</strong>") </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account (MyBA)</a> or<a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client (RAC)</a> (select "<strong>Respond to notices</strong>") </li>
 <li>Fax at the number or address provided on the PD1114 (using the <strong>Remittance breakdown </strong>form) </li>
 <li>Phone at <strong>1-800-959-5525</strong> </li>
 </ul>
