--- a/payroll/remit/pd7r.html
+++ b/payroll/remit/pd7r.html
@@ -163,7 +163,7 @@
 </ul>
 </li>
 <li class="cnjnctn-col">One or more of the following <strong>must </strong>apply:
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">You have employees who chose to be paid stock-based remuneration </li>
 <li class="cnjnctn-col">You relied on third-party information for insurance, health benefits, broker information, taxable benefits and/or automobile fleet mileage </li>
 <li class="cnjnctn-col">You have employees who live in other tax jurisdictions </li>
