--- a/payroll/remit/pd7dar.html
+++ b/payroll/remit/pd7dar.html
@@ -158,7 +158,7 @@
 <p>If you received a PD7D(AR), you <strong>must </strong>use the PD7D(AR) to remit (pay).</p>
 
 <p>You <strong>cannot</strong> use the PD7D(AR) to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
-<p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a></p>
 
 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
