--- a/payroll/remit/pd7dx.html
+++ b/payroll/remit/pd7dx.html
@@ -162,7 +162,7 @@
 <p>If you received a PD7D(X), you <strong>must </strong>use the PD7D(X) to remit (pay).</p>
 <p>If a <strong>partial </strong>payment is made on a balance owing, we will send you an updated <a href="/cra-arc/payroll/file/pd7d.html">Notice of assessment (PD7D)</a> with a new arrears remittance voucher and an updated balance including the interest.</p>
 <p>You <strong>cannot</strong> use the PD7D(X) to remit <strong>current </strong>payroll remittances. You must use the PD7A for the current remittances.</p>
-<p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters (PD7A)</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a></p>
 
 
 
