--- a/sred/index.html
+++ b/sred/index.html
@@ -130,7 +130,7 @@
    <li><a href="scientific-research-experimental-development-tax-incentive-program/forms.html">Forms and publications</a></li>
   <li><a href="scientific-research-experimental-development-tax-incentive-program/support.html">Support services and tools</a></li>
    <!--<li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html">Glossary</a></li>-->
-   <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/summary-provincial-territorial-research-development-tax-credits-december-31-2016.html">Provincial and territorial R&D tax credits</a></li>
+   <li><a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/provincial-territorial-research-development-tax-credits.html">Provincial and territorial R&amp;D tax credits</a></li>
 </ul>  
 <h2 class="h4">Reporting and sharing</h2>
 <ul class="list-unstyled">
