--- a/payroll/file/receiving.html
+++ b/payroll/file/receiving.html
@@ -105,10 +105,10 @@
 <p>The CRA may also send you other types of correspondence (for example, a Pensionable and Insurable Earnings Review (PIER) notice) depending on the situation.</p>
 <h2 id="type">Types</h2>
 <ul>
-<li><a href="tx14pd.html">Notice to file (TX14PD)</a></li>
+<li><a href="tx14pd.html">Notice to file - TX14PD</a></li>
 <li><a href="pier.html">Pensionable and insurable earnings review (PIER)</a></li>
-<li><a href="pd4r.html">Tax deduction, CPP and EI discrepancy notice (PD4R)</a></li>
-<li><a href="pd7d.html">Notice of assessment (PD7D)</a></li>
+<li><a href="pd4r.html">Tax deduction, CPP and EI discrepancy notice - PD4R</a></li>
+<li><a href="pd7d.html">Notice of assessment - PD7D</a></li>
 </ul>
 
 
