--- a/payroll/file/tx14pd.html
+++ b/payroll/file/tx14pd.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Notice to file (TX14PD) - File information returns (slips and summaries) - Canada.ca</title>
+         <title>Notice to file - TX14PD - File information returns (slips and summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -90,7 +90,7 @@
       <a href="receiving.html#gc-document-nav" class="visible-xs visible-sm">Receiving payroll correspondence from the CRA</a>
     <ul class="noline">
 	<li>
-      <a href="tx14pd.html" class="active" aria-current="page">Notice to file (TX14PD)</a>
+      <a href="tx14pd.html" class="active" aria-current="page">Notice to file - TX14PD</a>
     </li>
 	
 	<li>
@@ -98,12 +98,12 @@
       <a href="pier.html#gc-document-nav" class="visible-xs visible-sm">Pensionable and insurable earnings review (PIER)</a>
     </li>
 	<li>
-      <a href="pd4r.html" class="hidden-xs hidden-sm">Tax deduction, CPP and EI discrepancy notice (PD4R)</a>
-      <a href="pd4r.html#gc-document-nav" class="visible-xs visible-sm">Tax deduction, CPP and EI discrepancy notice (PD4R)</a>
+      <a href="pd4r.html" class="hidden-xs hidden-sm">Tax deduction, CPP and EI discrepancy notice - PD4R</a>
+      <a href="pd4r.html#gc-document-nav" class="visible-xs visible-sm">Tax deduction, CPP and EI discrepancy notice - PD4R</a>
     </li>
 	<li>
-      <a href="pd7d.html" class="hidden-xs hidden-sm">Notice of assessment (PD7D)</a>
-      <a href="pd7d.html#gc-document-nav" class="visible-xs visible-sm">Notice of assessment (PD7D)</a>
+      <a href="pd7d.html" class="hidden-xs hidden-sm">Notice of assessment - PD7D</a>
+      <a href="pd7d.html#gc-document-nav" class="visible-xs visible-sm">Notice of assessment - PD7D</a>
     </li>
 	</ul>
 	</li>
@@ -114,7 +114,7 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Notice to file (TX14PD)</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Notice to file - TX14PD</h1>
 <h2 class="h3">On this page</h2>
 <ul>
 	<li><a href="#h-1">What is a TX14PD notice</a></li>
