--- a/payroll/file/pier.html
+++ b/payroll/file/pier.html
@@ -92,20 +92,20 @@
     <ul class="noline">
 	
 	<li>
-      <a href="tx14pd.html" class="hidden-xs hidden-sm">Notice to file (TX14PD)</a>
-      <a href="tx14pd.html#gc-document-nav" class="visible-xs visible-sm">Notice to file (TX14PD)</a>
+      <a href="tx14pd.html" class="hidden-xs hidden-sm">Notice to file - TX14PD</a>
+      <a href="tx14pd.html#gc-document-nav" class="visible-xs visible-sm">Notice to file - TX14PD</a>
     </li>
 	<li>
       <a href="pier.html" class="active" aria-current="page">Pensionable and insurable earnings review (PIER)</a>
     </li>
 	
 	<li>
-      <a href="pd4r.html" class="hidden-xs hidden-sm">Tax deduction, CPP and EI discrepancy notice (PD4R)</a>
-      <a href="pd4r.html#gc-document-nav" class="visible-xs visible-sm">Tax deduction, CPP and EI discrepancy notice (PD4R)</a>
+      <a href="pd4r.html" class="hidden-xs hidden-sm">Tax deduction, CPP and EI discrepancy notice - PD4R</a>
+      <a href="pd4r.html#gc-document-nav" class="visible-xs visible-sm">Tax deduction, CPP and EI discrepancy notice - PD4R</a>
     </li>
 	<li>
-      <a href="pd7d.html" class="hidden-xs hidden-sm">Notice of assessment (PD7D)</a>
-      <a href="pd7d.html#gc-document-nav" class="visible-xs visible-sm">Notice of assessment (PD7D)</a>
+      <a href="pd7d.html" class="hidden-xs hidden-sm">Notice of assessment - PD7D</a>
+      <a href="pd7d.html#gc-document-nav" class="visible-xs visible-sm">Notice of assessment - PD7D</a>
     </li>
 	</ul>
 	</li>
