--- a/payroll/file/pd7d.html
+++ b/payroll/file/pd7d.html
@@ -130,7 +130,7 @@
 </ul>
 <p>It is <strong>not </strong>a statement of account.</p>
 <p>The PD7D <strong>cannot </strong>be used to remit current payroll remittances. You must use the PD7A to remit (pay). </p>
-<p>Learn more: <a href="/cra-arc/payroll/remit/index.html">Remit (pay) payroll deductions contributions</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/remit/pd7a.html">Statement of account for current source deductions - Regular and quarterly remitters - PD7A</a></p>
 
 
 <h2 id="h-3">What if you disagree with the PD7D notice of assessment</h2>
