--- a/payroll/remit/pd7r.html
+++ b/payroll/remit/pd7r.html
@@ -142,6 +142,7 @@
 
   <li><a href="#h_1">What is a PD7R</a></li> 
   <li><a href="#h_2">Eligibility to use the PoF</a></li></ul>
+<li><a href="#h_3">What happens if you use PoF and you are not eligible</a></li></ul>		 
 
  
  <h2 id="h_1">What is a PD7R</h2>
@@ -150,8 +151,13 @@
 <p>The PD7R <strong>cannot </strong>be used to remit <strong>current </strong>payroll remittances. You must use the PD7A for current remittances.</p>
 
  <h2 id="h_2">Eligibility to use PoF</h2>
-<p>Eligibility is applied to businesses separately. If you own multiple businesses, you may have businesses that are eligible and some that are not. If you use PoF and you are not eligible, penalties and interest will be applied. </p>
-<p>You are eligible to use PoF if you meet <strong>all </strong>of the following 3 criteria:</p>
+<p>You may be eligible to use PoF if your payroll account meets all conditions. If you have <strong>more than 1 </strong>payroll account (for example: <strong>123456789RP0001 </strong>and <strong>123456789RP0002</strong>), you may have a payroll account that is eligible and some that are not. </p>
+<details><summary>Example</summary>
+<p>Your business with payroll account number <strong>123456789RP0001 </strong>received a late-remitting penalty. Your payroll account is not eligible to use PoF. </p>
+<p>You also have have another payroll account <strong>123456789RP0002 </strong>and it has perfect payroll compliance. Your payroll account is eligible to use PoF. </p>
+</details>
+
+<p>You are eligible to use PoF if you meet <strong>all </strong>of the following 3 conditions:</p>
 
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col">The reconciliation payment is less than <strong>1% </strong>of the total annual remittances </li>
@@ -172,6 +178,11 @@
 </ul>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/campaigns/payment-on-filing.html">Payment on Filing</a></p>
 
+<h2 id="h_3">What happens if you use PoF and you are not eligible</h2>
+<p>If you use PoF and you are <strong>not </strong>eligible, <strong>penalties and interest </strong>will be applied.</p>
+<p>Learn more: <a href="/cra-arc/payroll/remit/when.html#h_2">When to remit (pay)</a> </p>
+		 
+		 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
