--- a/payroll/remit/pd7r.html
+++ b/payroll/remit/pd7r.html
@@ -141,8 +141,9 @@
   <ul>
 
   <li><a href="#h_1">What is a PD7R</a></li> 
-  <li><a href="#h_2">Eligibility to use the PoF</a></li></ul>
-<li><a href="#h_3">What happens if you use PoF and you are not eligible</a></li></ul>		 
+  <li><a href="#h_2">Eligibility to use the PoF</a></li>
+ <li><a href="#h_3">What happens if you use PoF and you are not eligible</a></li>
+</ul>		 
 
  
  <h2 id="h_1">What is a PD7R</h2>
