--- a/payroll/remit/how.html
+++ b/payroll/remit/how.html
@@ -196,9 +196,13 @@
 <p>You <strong>can</strong> use any approved methods, including electronically or at your <a href="#h-6">Canadian financial institution</a>.</p>
 <p>Learn more on the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 </details>
-<details><summary>Payments on filing - Reconciliation payment</summary>
+<details><summary>Payments on filing (PoF) - Reconciliation payment</summary>
 <p>When filing your T4 information return, you may be <strong>eligible </strong>to use the new remittance method to make a reconciliation payment on or before the last day of February without being subject to a penalty or interest. </p>
-<p>Learn more on eligibility and how to make a Payment on Filing reconciliation payment: <a href="https://www.canada.ca/en/revenue-agency/campaigns/payment-on-filing.html">Payment on filing</a></p>
+
+<p>Learn more on eligibility: <a href="/cra-arc/payroll/remit/pd7r.html">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a></p>
+<p>Learn more on the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
+
+
 </details>
 </dd>
 <dt>Accelerated remitter with a threshold 2</dt> <dd>
