--- a/payroll/remit/how.html
+++ b/payroll/remit/how.html
@@ -199,7 +199,7 @@
 <details><summary>Payments on filing (PoF) - Reconciliation payment</summary>
 <p>When filing your T4 information return, you may be <strong>eligible </strong>to use the new remittance method to make a reconciliation payment on or before the last day of February without being subject to a penalty or interest. </p>
 
-<p>Learn more on eligibility: <a href="/cra-arc/payroll/remit/pd7r.html">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a></p>
+<p>Learn more on <strong>eligibility</strong>: <a href="/cra-arc/payroll/remit/pd7r.html">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a></p>
 <p>Learn more on the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 
 
