--- a/payroll/file/when.html
+++ b/payroll/file/when.html
@@ -365,6 +365,8 @@
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 13(1)</a></dt> <dd> Filing - Death of a sole proprietor – Within 90 days </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 15(1)</a></dt> <dd> Information returns late filing penalty – Min $100/Max $2,500</dd>
 
+<dt><a href=""><span class="label label-warning">New</span> DCMA: 4(1)</a></dt> <dd> Returns filed on or after January 1, 2024 - Obligations</dd>
+<dt><a href=""><span class="label label-warning">New</span> DCMA: 5</a></dt> <dd> Returns filed on or after January 1, 2024 - Information returns</dd>
 
 </dl>
 </div>
