--- a/payroll/file/when.html
+++ b/payroll/file/when.html
@@ -294,7 +294,7 @@
 
 <tr>
 	<td>1 to 5  </td>
-	<td>penalty not based on number of days </td>
+	<td>Penalty not based on number of days </td>
 	<td>$100 flat penalty </td>
 </tr>
 <tr>
