--- a/cops/payments-paiements/en/options-inperson.html
+++ b/cops/payments-paiements/en/options-inperson.html
@@ -90,7 +90,7 @@
     </dd>
   </dl>
   <h3 id="h1_1">Additional details for a cheque or money order payment</h3>
-  <p>Place information/links here</p>
+  <p>Place information/links here. Some businesses will charge an additional fee when accepting a cheque.</p>
   <h2 id="h2">Debit card payment</h2>
   <dl class="dl-horizontal">
     <dt>Processing time</dt>
@@ -188,13 +188,14 @@
     </dd>
   </dl>
   <h3 id="h4_1">Additional details for an financial institution payment</h3>
-  <p>Place information/links here</p>
+  <p>Place information/links here. There business where you make the wire transfer may charge you extra to use their service, CRA is not collecting this amount.</p>
   <h2 id="h5">Cash payment</h2>
   <dl class="dl-horizontal">
     <dt>Processing time</dt>
     <dd><span class="far fa-clock"></span> X to X business days
       <p class="small">The payment is applied when it's received by CRA and <strong class="nowrap">not backdated</strong> to the day you made it</p>
     </dd>
+	  
     <dt>Account types</dt>
     <dd>
       <details>
@@ -216,7 +217,7 @@
   </dl>
   <h3 id="h5_1">Additional details for a cash payment</h3>
   <p>Place information/links here</p>
-  
+	      <p><mark>Notes to add</mark>Some businesses will charge an additional fee when accepting cash payments.  Trust the company that you are giving cash to, do not fall for scams.</p>
 <div class="owner">
                <p>From:</p>
                <ul class="list-inline">
