--- a/cops/payments-paiements/en/options-online.html
+++ b/cops/payments-paiements/en/options-online.html
@@ -429,7 +429,7 @@
       </details>
     </dd>
   </dl>
-  <h3 id="h4_1">Additional details for a third party payment transfer</h3>
+  <h3 id="h4_1">Additional details for a third party payment transfer.  Some businesses will charge fees for their services.  CRA is not responsible for these extra charges.</h3>
   <p>Place information/links here</p>
   <h2 id="h5">Remitance provider payment</h2>
   <dl class="dl-horizontal">
