--- a/cops/payments-paiements/en/payment-to-you.html
+++ b/cops/payments-paiements/en/payment-to-you.html
@@ -83,8 +83,8 @@
     
    <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/uncashed-cheque.html">Uncashed cheques</a></h3>
-          <p><mark>Determine if uncashed cheques can/will be automatically applied to any outstanding debts, and apply that information to this page.</mark>Summary of the information or tasks that can be accomplished on the sub-topic page. Remove prose or promotional messaging. Use action verbs. </p>
+          <h3><a href="https://www.canada.ca/en/revenue-agency/services/uncashed-cheque.html">Uncashed payments (nee cheques)</a></h3>
+          <p><mark>Determine if uncashed cheques can/will be automatically applied to any outstanding debts, and apply that information to this page. How does someone find and action an uncashed cheque for someone else (representative, deceased)</mark>Summary of the information or tasks that can be accomplished on the sub-topic page. Remove prose or promotional messaging. Use action verbs. </p>
         </section>
       </div>
 		
