--- a/cops/payments-paiements/en/send-payment.html
+++ b/cops/payments-paiements/en/send-payment.html
@@ -56,7 +56,7 @@
       </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
   <h1 property="name" id="wb-cont" dir="ltr"><span class="stacked" role="text"><span>Send a payment</span>: <span>Payments and the CRA</span></span></h1>
-<p><mark>Way to present non-resident business owner with Canadian business (would they go through "a business" or "non-resident", and if both, then provide rescue?).</mark></p>
+<p><mark>Way to present non-resident business owner with Canadian business (would they go through "a business" or "non-resident", and if both, then provide rescue?). <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/businesses-international-non-resident-taxes/income-tax-information-non-resident-corporations.html">different taxes for non-resident corps not covered</a>.</mark></p>
 <!--Guide: p1 - Personal tax (T1), p2 - COVID 19 Benefit, p3 - Employment Insurance (EI), p4 -Canada Pension Plan (CPP), p5 - Grants and Contributions (G&C), p6 - Operations and Maintenance (O&M), p7 - Apprentic Loan (CAL), p8 - Student Loan (CSL), p9 - Training Allowance (TAPS), b1 - Corporate income tax (T2), b2 - Excise duty (incl cannabis), b3 - Excise tax (exports), b4 - Customs imports, b5 - Air travellers security charge, b6 - Excise tax (within Canada), b7 - Fuel charge, b8 - GST/HST, b9 - Insurance premium (tax), b10 - Luxury tax, b11 - Nova Scotia Workers Compensation Board (NSWCB), b12 - Softwood lumber (tax), b13 - Underused housing tax, b14 - Vaping product (excise duty), c1 - Charity (re-registering), t1 - Trust (T3) debt payment, n1 - Non-resident Part I,  n2 - Non-resident Part XIII, n3 - Non-resident GST/HST security deposit//-->
   <div data-wb-urlmapping='{
 				   
