--- a/payroll/file/t1204sum.html
+++ b/payroll/file/t1204sum.html
@@ -225,11 +225,11 @@
  </details> 
  <details>
   <summary >Box 82 – Total service payments only</summary> 
-  <p>Add the amount in box 82 on all T1204 slips. Report the total on line 82.</p> 
+  <p>Add the amount in box 82 of all T1204 slips. Report the total on line 82.</p> 
  </details> 
  <details>
   <summary >Box 84 – Total mixed services and goods payments</summary> 
-  <p>Add the amount in box 84 on all T1204 slips. Report the total on line 84.</p> 
+  <p>Add the amount in box 84 of all T1204 slips. Report the total on line 84.</p> 
    </details> 
  </details> 
  <details>
