--- a/payroll/file/t5018sum.html
+++ b/payroll/file/t5018sum.html
@@ -233,7 +233,7 @@
  </details> 
  <details>
   <summary >Line 82 – Total construction subcontractor payments</summary> 
-  <p>Add the amount in box 22 on all T5018 slips. Report the total on line 82.</p> 
+  <p>Add the amount in box 22 of all T5018 slips. Report the total on line 82.</p> 
  </details> 
  <details>
   <summary >Person to contact about this return</summary> 
