--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -346,7 +346,7 @@
 <p class="mrgn-bttm-lg">Generally, allowances or reimbursements for travel expenses you provide to your employees are taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4>Situations</h4>
-<details><summary>Situation: Your employee is works <strong>part-time</strong></summary>
+<details><summary>Situation: Your employee works <strong>part-time</strong></summary>
 <h4 id="part">Non-taxable situation</h4>
 <p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your part-time employee for reasonable travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 
@@ -369,12 +369,12 @@
 <h4 id="agent">Non-taxable situation</h4>
 <p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your employee who is a <strong>salesperson, an agent selling property or negotiating contracts or a member of the clergy</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
+<li class="cnjnctn-col">The expenses are related to the performance of their employment duties (step 2)</li>
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
 
 <h4>Taxable situation</h4>
-<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
 </details>
 
 
@@ -414,7 +414,7 @@
 <p>Under the CRA's administrative policy, if you reimburse your <strong>employee's spouse or common-law partner</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The amount of the travel expenses paid for the spouse is reasonable (step 2)</li>
-<li class="cnjnctn-col">You require the spouse or common-law partner their presence on the <strong>business trip to accomplish the business objectives</strong> of the trip</li>
+<li class="cnjnctn-col">You requested the spouse or common-law partner to be present on the <strong>business trip</strong></li>
 <li class="cnjnctn-col">The spouse or common-law partner <strong>spent more than 50% of the time on business-related</strong> activities</li>
 </ul>
 <p>The amount of the expense which is not taxable is the amount of the employee's spouse or common-law partner travelling expenses necessary to accomplish the business objectives of the trip.</p>
@@ -439,7 +439,8 @@
 <h4>Taxable situation</h4>
 <p>If the travel expenses paid for your employee acting as host of the incentive award trip <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
 
-<p><strong>Only</strong> the cost the employer paid that is <strong>not</strong> related to business activities is a taxable benefit.</p>
+<p>If the employee works directly in <strong>business activities for less than 90%</strong> of each day (not a substantial part), the CRA will accept a proration of the benefit if all other conditions are met.</p>
+	
 </details>
 	
 <details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
@@ -532,7 +533,7 @@
 
 <details>
 			<summary>Example 1 - No calculation</summary>
-<p>An employer paid an allowance of $4,000 to his employee for travel expenses. The employee is sent to Toronto in Ontario for 9 days to meet with key partners. Presence is required on all days with free time to tour Toronto at own expense. The airfaire for the employee is $1,300. The hotel cost is $300 per night for 9 nights for a total of $2,700.</p>
+<p>An employer paid an allowance of $4,000 to his employee for travel expenses. The employee is sent to Toronto in Ontario for 9 days to meet with key partners. Presence is required on all days with free time to tour Toronto at own expense. The airfare for the employee is $1,300. The hotel cost is $300 per night for 9 nights for a total of $2,700.</p>
 
 		
 <p>The allowance paid by the employer is <strong>not</strong> a taxable benefit because the benefit is for travel expenses  in connection with or in the course of their office or employment duties.</p>		
@@ -543,7 +544,7 @@
   </details>
 <details>
 			<summary>Example 2 - Calculations</summary>
-<p>An employer paid an allowance of $5,200 to his employee for travel expenses. Employee sent to Niagara Falls in Ontario for 9 days to meet with key partners. The employee requested to stay an additional four nights after the end of the meetings and was allowed to do so by the employer. The extra days resulted in no increased cost for the flights, but four additional nights accommodations.  Presence is required on all days with free time to tour Toronto at own expense. The airfaire for the employee is $1,300. The hotel cost is $300 per night for 13 nights for a total of $3,900.</p>
+<p>An employer paid an allowance of $5,200 to his employee for travel expenses. Employee sent to Niagara Falls in Ontario for 9 days to meet with key partners. The employee requested to stay an additional four nights after the end of the meetings and was allowed to do so by the employer. The extra days resulted in no increased cost for the flights, but four additional nights’ accommodations.  Presence is required on all days with free time to tour Toronto at own expense. The airfare for the employee is $1,300. The hotel cost is $300 per night for 13 nights for a total of $3,900.</p>
 
 		<ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
                                     <li><span class="fa-stack text-success">
@@ -556,7 +557,7 @@
                                        <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$4,000 ($2,700 for 9 nights + $1,300 airfaire) is the amount of the travel allowance that is not taxable</span>
+                                       </span>  <span class="mrgn-tp-0 text-muted h5">$4,000 ($2,700 for 9 nights + $1,300 airfare) is the amount of the travel allowance that is not taxable</span>
                                        <div class="mrgn-tp-md"></div>
                                     </li>
 			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -585,11 +586,30 @@
   </details>
 <details>
 			<summary>Example 3 - Calculations</summary>
-<p>New example here to be provided by Jeremiah.</p>
+<p>An employer paid an allowance of $200 monthly ($2,400 yearly) to his part-time employee for travel expenses. The employee is a teacher at a designated educational institution. The school is 60 kilometres from their home. </p>
 
-		
+<ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
+                                    <li><span class="fa-stack text-success">
+                                       <span class="far fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                       </span><span class="mrgn-tp-0 text-muted h5">$2,400 is the total value of the travel  allowances</span> 
+                                    </li>
 
+ 				<li class="brdr-bttm">
+                                       <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
+                                       <span class="far fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                       </span>  <span class="mrgn-tp-0 text-muted h5">$0 because the employee does not reimburse the employer</span>
+                                       <div class="mrgn-tp-md"></div>
+                                    </li>
+			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                       <span class="fas fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
+                                       </span> <span class="mrgn-tp-0 text-muted h5">2,400 is the value of the benefit to be included on employee's T4 slip in code 40
+                                       </span></span> 
+                                    </li>		
 
+  </ul>
   </details>
 
 </li>
