--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -656,13 +656,13 @@
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vi) </a></dt>
 <dd>  Reasonable allowances received by a minister or clergyman </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vii) </a></dt>
-<dd> Reasonable allowances for travel expenses (Restriction at the municipal or regional level) </dd>
+<dd> Reasonable allowances for travel expenses (restriction at the municipal or regional level) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vii.1)</a></dt>
 <dd> Reasonable allowances for the use of a motor vehicle (received from the employee's employer for travelling in the performance of employment duties) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(x)</a></dt>
 <dd>  Allowance for the use of the vehicle for the purpose of the allowance is not based solely on the number of kilometers </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(ix)</a></dt>
-<dd> Allowance not in excess of reasonable amounts for tuition fees (Child living away from the employee's domestic establishment – official language) </dd>
+<dd> Allowance not in excess of reasonable amounts for tuition fees (child living away from the employee's domestic establishment – official language) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(xi)</a></dt>
 <dd> Reimbursement for supplementary business insurance, toll or ferry charges if the allowance was determined without reference to those reimbursed expenses</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(e) and 6(2)</a></dt>
