--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -343,7 +343,7 @@
 
 
 <li> <h3 id="step4">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Generally, allowances or reimbursements for travel expenses you provide to your employees are taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Generally, if you provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for travel expenses to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4>Situations</h4>
 <details><summary>Situation: Your employee works <strong>part-time</strong></summary>
